fixed shopping schema
